@startuml users
left to right direction

entity user {
    *id: uuid
}

entity role {
    *code: integer
    *name: text
}

entity user_roles {
    *user_id: uuid
    *role_code: integer
}

entity permission {
    *code: integer
    *name: text
}

entity role_permissions {
    *role_code: integer
    *permission_code: integer
}

user }|..|| user_roles
user_roles ||..o{ role

role }o..|| role_permissions
role_permissions ||..o{ permission


@enduml